# ROS-Robot-Operating-System-

./: README.md
part 1/exercise_one/: CMakeLists.txt  package.xml
part 1/exercise_one/src/: data_processing.cpp  user_info_driver.cpp
part 1/exercise_three/: CMakeLists.txt  package.xml
part 1/exercise_three/msg/: UserInfo.msg
part 1/exercise_three/src/: data_processing.cpp  user_info_driver.cpp
part 1/exercise_two/: CMakeLists.txt  package.xml
part 1/exercise_two/src/: data_processing.cpp
part 2/: CMakeLists.txt  package.xml
part 2/msg/: msg.msg
part 2/src/: listener.cpp  talker.cpp
part 3/: README.md  husky  ros_best_practices  teleop_twist_keyboard
part 3/ackermann_data/: CMakeLists.txt  package.xml
part 3/ackermann_data/src/: listener.cpp
part 3/husky_highlevel_controller/launch/: shiko.launch
part 3/steering_plugin/: CMakeLists.txt  steering_plugin.cc
part 3/test/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  manifest.xml
part 3/test/src/: test.cpp
part 4/ackermann_01/: Ackermann_01.cpp  Ackermann_01.h  Ackermann_01_data.cpp  CMakeLists.txt  MW_custom_RTOS_header.h  rtwtypes.h  slros_initialize.h
part 4/vel_steer/: vel_steer.launch
part 4/vel_steer/vel_steer/: package.xml
part 4/vel_steer/vel_steer/include/vel_steer/: VelSteer.hpp
part 4/vel_steer/vel_steer/src/: VelSteer.cpp
part 5/: CMakeLists.txt
part 5/src/: VelSteer.cpp
part 6/.catkin_tools/profiles/default/: config.yaml
part 6/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
part 6/devel/include/ackermann_msgs/: AckermannDrive.h  AckermannDriveStamped.h
part 6/devel/lib/ackermann_01/: ackermann_01_node
part 6/devel/lib/our_model/: our_model
part 6/devel/lib/pkgconfig/: ackermann_01.pc  ackermann_msgs.pc  our_model.pc  vel_steer.pc
part 6/devel/lib/vel_steer/: vel_steer
part 6/devel/share/ackermann_01/cmake/: ackermann_01Config.cmake
part 6/devel/share/ackermann_msgs/cmake/: ackermann_msgs-msg-paths.cmake  ackermann_msgsConfig.cmake
part 6/devel/share/our_model/cmake/: our_modelConfig.cmake
part 6/devel/share/roseus/ros/ackermann_msgs/: manifest.l
part 6/devel/share/vel_steer/cmake/: vel_steerConfig.cmake
part 6/src/ackermann_01/: Ackermann_01_private.h  Ackermann_01_types.h  defines.txt  ert_main.cpp  package.xml  rtmodel.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp
part 6/src/our_model/: CMakeLists.txt
part 6/src/our_model/config/: config.yaml
part 6/src/our_model/include/model/: hello_model.hpp
part 6/src/our_model/launch/: our_model_node.launch
part 6/src/our_model/src/: model.cpp  our_model_node.cpp
part 6/src/vel_steer/config/: config.yaml
part 6/src/vel_steer/include/vel_steer/: VelSteer.hpp
part 6/src/vel_steer/src/: vel_steer_node.cpp
